; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/advapi32/extr_RegQueryValueExW.c_delete_key.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/advapi32/extr_RegQueryValueExW.c_delete_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@KEY_ENUMERATE_SUB_KEYS = common dso_local global i32 0, align 4
@ERROR_NO_MORE_ITEMS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [1 x i32] zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32)* @delete_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @delete_key(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %7 = load i32, i32* @MAX_PATH, align 4
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %3, align 8
  %10 = alloca i32, i64 %8, align 16
  store i64 %8, i64* %4, align 8
  br label %11

11:                                               ; preds = %29, %1
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @_countof(i32* %10)
  %14 = call i64 @RegEnumKeyW(i32 %12, i32 0, i32* %10, i32 %13)
  store i64 %14, i64* %5, align 8
  %15 = icmp ne i64 %14, 0
  %16 = xor i1 %15, true
  br i1 %16, label %17, label %30

17:                                               ; preds = %11
  %18 = load i32, i32* %2, align 4
  %19 = load i32, i32* @KEY_ENUMERATE_SUB_KEYS, align 4
  %20 = call i64 @RegOpenKeyExW(i32 %18, i32* %10, i32 0, i32 %19, i32* %6)
  store i64 %20, i64* %5, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %17
  %23 = load i32, i32* %6, align 4
  %24 = call i64 @delete_key(i32 %23)
  store i64 %24, i64* %5, align 8
  br label %25

25:                                               ; preds = %22, %17
  %26 = load i64, i64* %5, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %25
  br label %30

29:                                               ; preds = %25
  br label %11

30:                                               ; preds = %28, %11
  %31 = load i64, i64* %5, align 8
  %32 = load i64, i64* @ERROR_NO_MORE_ITEMS, align 8
  %33 = icmp eq i64 %31, %32
  br i1 %33, label %34, label %37

34:                                               ; preds = %30
  %35 = load i32, i32* %2, align 4
  %36 = call i32 @RegDeleteKeyW(i32 %35, i8* bitcast ([1 x i32]* @.str to i8*))
  store i64 0, i64* %5, align 8
  br label %37

37:                                               ; preds = %34, %30
  %38 = load i32, i32* %2, align 4
  %39 = call i32 @RegCloseKey(i32 %38)
  %40 = load i64, i64* %5, align 8
  %41 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %41)
  ret i64 %40
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @RegEnumKeyW(i32, i32, i32*, i32) #2

declare dso_local i32 @_countof(i32*) #2

declare dso_local i64 @RegOpenKeyExW(i32, i32*, i32, i32, i32*) #2

declare dso_local i32 @RegDeleteKeyW(i32, i8*) #2

declare dso_local i32 @RegCloseKey(i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
